--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <td class="player-name">Player 2</td>
     </tr>
     <tr>
-      <td><img class="dice-img" src="images/dice6.png" alt=""></td>
-      <td><img class="dice-img" src="images/dice6.png" alt=""></td>
+      <td><img class="dice-img" src="dice6.png" alt=""></td>
+      <td><img class="dice-img" src="dice6.png" alt=""></td>
     </tr>
   </table>
   <script src="index.js" charset="utf-8"></script>
